spring security bootstrapped

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,26 @@
-#spring.jpa.hibernate.ddl-auto=update
+#database management
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=coderslab
+
+#show sql commands in logs/ console
+spring.jpa.show-sql=true
+
+#ViewResolver settings
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#langauge settings
+#spring.web.locale=pl_PL
+#spring.web.locale-resolver=fixed
+
+#basic security settings - temporary
+spring.security.user.name=user
+spring.security.user.password=80b7a978-a467-47ed-9ded-3c1591f57fa5
+
+
+
+
