--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,18 @@ spring.mvc.view.suffix=.jsp
 spring.security.user.name=user
 spring.security.user.password=80b7a978-a467-47ed-9ded-3c1591f57fa5
 
+#email settings
+#gmail settings https://www.google.com/settings/security/lesssecureapps
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=projectthirteenms@gmail.com
+spring.mail.password=project13MS
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
 
 
 
