setup 403, 404, 500 error pages and actions, update security config file to block users and admins to creating accounts and loging in again

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.mvc.view.suffix=.jsp
 #spring.web.locale-resolver=fixed
 
 #basic security settings - temporary
-spring.security.user.name=user
-spring.security.user.password=80b7a978-a467-47ed-9ded-3c1591f57fa5
+#spring.security.user.name=user
+#spring.security.user.password=80b7a978-a467-47ed-9ded-3c1591f57fa5
 
 #email settings
 #gmail settings https://www.google.com/settings/security/lesssecureapps
@@ -29,6 +29,9 @@ spring.mail.username=projectthirteenms@gmail.com
 spring.mail.password=project13MS
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#disable the white label error page
+server.error.whitelabel.enabled=false
 
 
 
