--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <version>2.3.12.RELEASE</version>
         </dependency>
 
+<!--        deeper String creation-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
+
     </dependencies>
 
     <build>
