--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,19 @@
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=coderslab
+##internal db
+#spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=coderslab
+##external db
+spring.datasource.url=jdbc:mysql://sql213.main-hosting.eu:3306/u912436210_snippetAppDB2?serverTimezone=UTC
+spring.datasource.username=u912436210_snippetAppDB2
+spring.datasource.password=snippetAppDB2999
+
+#final static String DBname = "u912436210_snippetAppDB2";
+#final static String user = "u912436210_snippetAppDB2";
+#final static String password = "snippetAppDB2999";
+#final static String URL = "jdbc:mysql://sql213.main-hosting.eu/" + DBname + "?serverTimezone=UTC";
 
 #show sql commands in logs/ console
 spring.jpa.show-sql=true
