user snippet crud (backend perspective) finalized ;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #disable the white label error page
 server.error.whitelabel.enabled=false
 
+#database hikari timeout for editing snippets
+spring.datasource.hikari.maxLifeTime=600000
 
 
 
