two DB created (local + hostinger); added account validation after 24 ( deleted from DB if not confirmed); added validation if last admin wants to delete last admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,17 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 ##internal db
-#spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=coderslab
+spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Szczepan1
 ##external db
-spring.datasource.url=jdbc:mysql://sql213.main-hosting.eu:3306/u912436210_snippetAppDB2?serverTimezone=UTC
-spring.datasource.username=u912436210_snippetAppDB2
-spring.datasource.password=snippetAppDB2999
+#spring.datasource.url=jdbc:mysql://sql213.main-hosting.eu:3306/u912436210_snippetAppDB2?serverTimezone=UTC
+#spring.datasource.username=u912436210_snippetAppDB2
+#spring.datasource.password=snippetAppDB2999
 
-#final static String DBname = "u912436210_snippetAppDB2";
-#final static String user = "u912436210_snippetAppDB2";
-#final static String password = "snippetAppDB2999";
-#final static String URL = "jdbc:mysql://sql213.main-hosting.eu/" + DBname + "?serverTimezone=UTC";
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#added when local MySQL DB was set up
+#spring.jpa.properties.hibernate.dialect =  org.hibernate.dialect.MySQL8Dialect
 
 #show sql commands in logs/ console
 spring.jpa.show-sql=true
