--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 ##internal db
 spring.datasource.url=jdbc:mysql://localhost:3306/snippetDB?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Szczepan1
+spring.datasource.password=coderslab
 ##external db
 #spring.datasource.url=jdbc:mysql://sql213.main-hosting.eu:3306/u912436210_snippetAppDB2?serverTimezone=UTC
 #spring.datasource.username=u912436210_snippetAppDB2
